[metadata]
name = DLRN
summary = Build packages
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9

[files]
packages =
    dlrn

data_files =
    share/dlrn/scripts = scripts/*

[options.extras_require]
kerberos =
       gssapi
       ipalib

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    dlrn = dlrn.shell:main
    delorean = dlrn.shell:deprecation
    dlrn-purge = dlrn.purge:purge
    dlrn-remote = dlrn.remote:remote
    dlrn-user = dlrn.user:user_manager
dlrn.api.drivers =
    DBAuthentication = dlrn.api.drivers.dbauthentication:DBAuthentication
    KrbAuthentication = dlrn.api.drivers.krbauthentication:KrbAuthentication
